--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,37 +2,35 @@
 * {
   box-sizing: border-box;
 }
-
 body {
   font-family: "Archivo", sans-serif;
   background-image: linear-gradient(to right, #a1a1a1, #b5b5b5, #c9c9c9, #dedede, #f3f3f3);
 }
-
-.content-wrapper {
-  max-width: 80%;
-}
-
 .jumbotron {
   background-image: linear-gradient(to left, #a1a1a1, #b5b5b5, #c9c9c9, #dedede, #f3f3f3);
   margin: 0;
   padding: 50px;
 }
-
-.jumbotron-img {
+.jumbotron-home-img {
   opacity: 0.7;
   width: 350px;
   filter: grayscale(10%);
 }
-
+.jumbotron-img {
+  opacity: 0.7;
+  width: 300px;
+  filter: grayscale(10%);
+}
 .welcome {
   margin-top: 60px;
   font-weight: 700;
   color: white;
   text-shadow: 1px 1px 4px black;
 }
-
-.chamber-members {
+.members-tbl {
   background-color: #f3f3f3;
+  padding-top: 10px;
 }
-
-/*# sourceMappingURL=style.css.map */
+table {
+  border: 1px solid white;
+}
